<resources>
    <string name="app_name">STRAW</string>
    <string name="title">Discover the best place to eat. Booking your table. Order your food, Stay with friends</string>
    <string name="error_log_in">Error Logging In</string>
    <string name="log_out">- Log out</string>
    <string name="forget_mail">A mail was sent to you with the new password!</string>
    <string name="ident">Identification</string>
    <string name="notyet">Not yet a member?</string>
    <string name="user_n">User Name</string>
    <string name="pwd">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot">Forgot your password?</string>
    <string name="c_user">Create user</string>
    <string name="c_man">Create manager</string>
    <string name="email">Email</string>
    <string name="n_pwd">New Password</string>
    <string name="o_pwd">Old Password</string>
    <string name="c_pwd">New Password</string>
    <string name="Password">Password</string>
    <string name="cc_pwd">Confirm Password</string>
    <string name="addr">Address</string>
    <string name="tel">Telephone</string>
    <string name="r_name">Restaurant Name</string>
    <string name="r_type">Restaurant Type</string>
    <string name="seats">Number of seats</string>
    <string name="bar">Bar</string>
    <string name="restaurant">Restaurant</string>
    <string name="canteen">Canteen</string>
    <string name="ta">Take Away</string>
    <string name="r_t">Food Type</string>
    <string name="price">Price range</string>
    <string name="c_acc">Create Account</string>
    <string name="error">Error!</string>
    <string name="m_succ">Success!</string>
    <string name="m_c">Account Created!</string>
    <string name="m_user_n">Write a valid user name</string>
    <string name="m_email">Write a valid email</string>
    <string name="m_pwd">Passwords are not the same</string>
    <string name="m_tel">Write a valid telephone number</string>
    <string name="m_r_n">Write a valid restaurant name</string>
    <string name="m_addr">Write a valid address name</string>
    <string name="m_food">Write a valid food type</string>
    <string name="m_seats">Number of seats must be greater than 1</string>
    <string name="m_price">Wrong price</string>
    <string name="m_save">Profile saved!</string>
    <string name="save">Save</string>
    <string name="edit_prof">Edit profile</string>
    <string name="remember">Remember me</string>
    <string name="Remove">Remove</string>
    <string name="Default">Default</string>
    <string name="Menu">- Menu</string>
    <string name="Reservation">- Reservation</string>
    <string name="ErrorGeocoder">Error geocoder\nPlease retry in few seconds</string>
    <string name="jap">Japanese</string>
    <string name="italian">Italian</string>
    <string name="pizzeria">Pizzeria</string>
    <string name="kebap">Kebap</string>
    <string name="chinese">Chinese</string>
    <string name="other">Other</string>
    <string name="PastReservations">- Past reservations</string>
    <string name="Add_plate">Add Plate</string>
    <string name="Add_drink">Add Drink</string>
    <string name="Edit_plate">Edit Plate</string>
    <string name="Edit_drink">Edit Drink</string>
    <string name="Name">Name</string>
    <string name="Price">Price</string>
    <string name="Vegan">Vegan</string>
    <string name="Gluten_free">Gluten Free</string>
    <string name="Nothing">No particular diet</string>
    <string name="Choose_photo">Choose photo</string>
    <string name="Take_photo">Take photo</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Volume">Volume</string>
    <string name="Add">Add</string>
    <string name="Currency">€</string>
    <string name="Volume_unit">L</string>
    <string name="Plates">Plates</string>
    <string name="Drinks">Drinks</string>
    <string name="Time">Time</string>
    <string name="NbPeople">Number</string>
    <string name="Persons">persons</string>
    <string name="Handle">Handle</string>
    <string name="Discard">Discard</string>
    <string name="Accept">Accept</string>
    <string name="MoreOptions">More Options...</string>
    <string name="ChangeTime">Change Time</string>
    <string name="Cancel">Cancel</string>
    <string name="RefuseOrder">Refuse this order?</string>
    <string name="Yes">Yes</string>
    <string name="OrderAccepted">Your reservation was accepted by the restaurant</string>
    <string name="OrderRefused">Your reservation was refused by the restaurant</string>
    <string name="OrderTimeChanged">Your reservation has been changed to</string>
    <string name="OrderRefusedToast">This order is refused
 A notification has been sent to the customer</string>
    <string name="OrderAcceptedToast">This order is confirmed
 A notification has been sent to the customer</string>
    <string name="HourChangedToast">The time of this reservation is changed.
    A message has been sent to the customer for confirmation</string>
    <string name="AcceptOrder">Accept this order?</string>
    <string name="offerts">- Offers</string>
    <string name="c_of">Create offer</string>
    <string name="edit_of">Edit offer</string>
    <string name="show_off">Show offer</string>
    <string name="finish">Finish</string>
    <string name="menu">The Menu</string>
    <string name="offer">The Offer</string>
    <string name="returnT">Return</string>
    <string name="put_price">Write the price of the offer</string>
    <string name="save_price">Save Price</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_">Search_Activity</string>
    <string name="a_search">Advanced search</string>
    <string name="q_search">Quick search</string>
    <string name="see_prof">Profile</string>
    <string name="title_activity_quick_search">QuickSearchActivity</string>
    <string name="addfilter">Add filter</string>
    <string-array name="list_sort_by">
        <item>Sort by rating</item>
        <item>Sort by location</item>
        <item>Sort by price</item>
    </string-array>
    <string-array name="list_type">
        <item>Any place</item>
        <item>Restaurant</item>
        <item>Canteen</item>
        <item>Take Away</item>
        <item>Bar</item>
    </string-array>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="All">All</string>
    <string name="FoodType">Type of food:</string>
    <string name="u_t">User Type</string>
    <string name="uni">University</string>
    <string name="u_d">User diet</string>
    <string name="p_t">Preferred Time</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="worker">Worker</string>
    <string name="AddFriends"><u>Add new friends to your friend-list</u></string>
    <string name="Done">Done</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Create">Create</string>
    <string name="ReservationUpdated">Reservation updated</string>
    <string name="BookTable"><u>Book a table</u></string>
    <string name="HowManyPeople">How many people ?</string>
    <string name="Confirm">Confirm</string>
    <string name="Where">Where ? (optional)</string>
    <string name="Inside">Inside</string>
    <string name="Outside">Outside</string>
    <string name="NoPreference">No preference</string>
    <string name="When">When ?</string>
    <string name="InviteFriends">Invite Friend(s)</string>
    <string name="Invite">Invite</string>
    <string name="PreOrder">Pre-Order</string>
    <string name="ReservationSent">Reservation sent to the restaurant</string>
    <string name="ReviewSaved">Review saved</string>
    <string name="UpdatingReservation">Updating reservation</string>
    <string name="EmptyReservation">Please indicate the number of people</string>
    <string name="Place">Place : </string>
    <string name="InviteFriendsTitle"><u>Invite Friends</u></string>
    <string name="SendInvitation">Send Invitation(s)</string>
    <string name="InvitationsSent">Invitation(s) sent</string>
    <string name="InvitationMessage"> invites you to come at </string>
    <string name="at">at</string>
    <string name="on">on</string>
    <string name="SelectMessageType">How do you want to send the invitation(s) ?</string>
    <string name="SMS">SMS</string>
    <string name="Email">Email</string>
    <string name="STRAWInvitation">STRAW Invitation</string>
    <string name="PreOrderFood"><u>Pre-order Food</u></string>
    <string name="AddPlateTitle"><u>Add Plate</u></string>
    <string name="AddDrinkTitle"><u>Add Drink</u></string>
    <string name="Confirm_title"><u>Confirm</u></string>
    <string name="SendingReservation">Sending reservation</string>
    <string name="rev_h">- Review History</string>
    <string name="res_h">- Reservation History</string>
    <string name="friends">- Friend List</string>
    <string name="saving">Saving data</string>
    <string name="NoNetwork">Network is not available\nPlease check your connection</string>
    <string name="AccountCreation">Account creation</string>
    <string name="AccountEdition">Account edition</string>
    <string name="ProfileCreationSuccessful">Profile created successfully</string>
    <string name="LoggingIn">Logging In</string>
    <string name="NoAuth">No user authenticated, please login</string>
    <string name="RewindChange">Error - Undoing previous changes</string>
    <string name="RetrievingData">Retrieving data</string>
    <string name="NameAlreadyUsed">This name already exists</string>
    <string name="NoMatchingProfile">No matching profile</string>
    <string name="StoringData">Your profile is being created</string>
    <string name="SavingMenu">Saving menu</string>
    <string name="SavingMenuSuccessful">Menu successfully saved</string>
    <string name="SavingPlates">Saving plates</string>
    <string name="SavingDrinks">Saving drinks</string>
    <string name="RetrievingRestaurants">We are looking for the best results</string>
    <string name="RetrievingReservations">Let us see who want to come</string>
    <string name="NoReservation">No reservation for now</string>
    <string name="s_menu">Menu</string>
    <string name="s_book">Reserve</string>
    <string name="s_preo">Pre Order</string>
    <string name="s_add_rv">Add review</string>
    <string name="ErrorNetwork">Error network</string>
    <string name="write_rev">Rate and write a brief description</string>
    <string name="WriteReview">Write your review here...</string>
    <string name="submit">Submit</string>
    <string name="nav">Navigate</string>
    <string name="on_map">On map</string>
    <string name="AdvancedSearch"><u>Advanced Search</u></string>
    <string name="WhereToEat">Where do you want to eat ?</string>
    <string name="Current">Current</string>
    <string name="Address">Address</string>
    <string name="Area">Area</string>
    <string name="WhatToEat">What do you want to eat ?</string>
    <string name="Search">Search</string>
    <string-array name="list_restaurant_type">
        <item>Restaurant</item>
        <item>Canteen</item>
        <item>Take Away</item>
        <item>Bar</item>
    </string-array>
    <string name="GPSDisabled">GPS disabled</string>
    <string name="LocationRefused">Location rights not granted</string>
    <string name="InvalidAddress">Invalid address</string>
    <string name="OK">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCf6IoppoDUF_r3jXs9yBHdwg8LpF2ETQ4</string>
    <string name="LogInAndReserve">Log In And Reserve</string>
    <string name="Add_Plate">ADD PLATE</string>
    <string name="Add_Drink">ADD DRINK</string>
    <string name="Advanced_Search">ADVANCED SEARCH</string>
    <string name="Book_Table">BOOK TABLE</string>
</resources>