<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cyan_light"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/number_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NbPeople"
        android:textSize="22dp"
        android:textColor="@color/text_list"
        android:focusable="false"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/number_people"
        android:text="@string/Time"
        android:textSize="22dp"
        android:textColor="@color/text_list"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/plates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Plates"
        android:textSize="@dimen/Content_size"
        android:textColor="@color/text_list"
        android:layout_below="@id/number_people"
        android:focusable="false"
        />

    <Button
        android:id="@+id/HandleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_centerVertical="true"
        android:text="@string/Handle"
        android:textSize="10dp"
        android:background="@drawable/customborder_buttons"
        />


</RelativeLayout>