<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="straw.polito.it.straw.activities.AdvancedSearchActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AdvancedSearch"
        android:textAlignment="center"
        android:textSize="@dimen/Title_size"/>

    <RelativeLayout
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/customborder">

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WhereToEat"
            android:textAlignment="center"
            android:textSize="@dimen/Content_size"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Current"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <RadioButton
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Area"/>
        </RadioGroup>

        <EditText
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/GPSText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/GPSDisabled"
            android:textSize="@dimen/Title_size"
            android:textAlignment="center"
            android:visibility="invisible"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/place"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/customborder">

        <TextView
            android:id="@+id/subTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WhatToEat"
            android:textAlignment="center"
            android:textSize="@dimen/Content_size"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:entries="@array/list_restaurant_type"></Spinner>
    </RelativeLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder_buttons"
        android:layout_below="@id/type"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/Search"/>

</RelativeLayout>
