<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grey"
    tools:context=".activities.HomeActivity">
    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="300sp"
        android:orientation="vertical" android:padding="20dp"
        android:id="@+id/id_relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/customborder">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_editText"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/pwd_editText"
            android:layout_alignEnd="@+id/pwd_editText"
            android:layout_alignLeft="@+id/pwd_editText"
            android:layout_alignStart="@+id/pwd_editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pwd_editText"
            android:layout_above="@+id/log_in_button"
            android:layout_marginBottom="27dp"
            android:layout_alignLeft="@+id/log_in_button"
            android:layout_alignStart="@+id/log_in_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/log_in_button"
            android:layout_above="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="34dp"
            android:background="@drawable/customborder_buttons"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/forgot"
            android:id="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_n"
            android:id="@+id/user_n_textView"
            android:layout_alignBottom="@+id/user_name_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pwd"
            android:id="@+id/pwd_textView"
            android:layout_alignBottom="@+id/pwd_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:text="@string/notyet"
        android:id="@+id/notyet_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/customborder_dark"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:text="@string/ident"
        android:id="@+id/id_textView"
        android:layout_above="@+id/id_relativeLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/customborder_dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:id="@+id/create_relativeLayout"
        android:layout_above="@+id/id_textView"
        android:layout_below="@+id/notyet_textView"
        android:background="@drawable/customborder">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_user"
            android:id="@+id/c_user_button"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/customborder_buttons"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_man"
            android:id="@+id/c_man_button"
            android:layout_alignBottom="@+id/c_user_button"
            android:layout_toRightOf="@+id/c_user_button"
            android:layout_toEndOf="@+id/c_user_button"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:background="@drawable/customborder_buttons"/>
    </RelativeLayout>
</RelativeLayout>
